--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width">
- <title>Ejemplo de servicio</title>
+ <title>Servicio</title>
 </head>
 <body>
- <h1>Ejemplo sdasdasdade servicio</h1>
+ <h1>Ejemplo de servicio</h1>
  <button onclick="ejecuta()">
   Ejecuta
  </button>
